# mobilenet-ssd-linux-pc

./: .gitignore  CMakeLists.txt
src/: captrue_data.cpp  captrue_video.cpp  config.cpp  config.h  config.txt  manu_roi.cpp  merge2video.cpp  mssd_V4L2.cpp  mssd_V4L2_knn.cpp  mssd_cvCaptrue.cpp  mssd_img.cpp  mssd_video.cpp  mssd_video_knn.cpp  mt_mssd copy.cpp  mt_mssd.cpp
src/knn/: knn.cpp  knn.h
src/v4l2/: v4l2.cpp  v4l2.h
